Custom Searches again and again.

--- a/TorboFile/App.xaml
+++ b/TorboFile/App.xaml
@@ -16,7 +16,7 @@
 
 		<ResourceDictionary>
 			<ResourceDictionary.MergedDictionaries>
-				<ResourceDictionary Source="assets/MainDictionary.xaml"/>
+				<ResourceDictionary Source="assets/HelperDictionary.xaml"/>
 			</ResourceDictionary.MergedDictionaries>
 
         <!-- DATA TEMPLATES -->
